.omo/evidence/task-5-error-handler.txt

> Task :compileJava
/data/Workspace/unika_estagio/spring/estagio/src/main/java/com/desafio/estagio/wicket/builder/ComponentAttributeBuilder.java:42: error: method add in class Component cannot be applied to given types;
        component.add(child);
                 ^
  required: Behavior[]
  found:    Component
  reason: varargs mismatch; Component cannot be converted to Behavior
Note: /data/Workspace/unika_estagio/spring/estagio/src/main/java/com/desafio/estagio/wicket/component/ValidationFeedback.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///data/Workspace/unika_estagio/spring/estagio/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  /data/Workspace/unika_estagio/spring/estagio/src/main/java/com/desafio/estagio/wicket/builder/ComponentAttributeBuilder.java:42: error: method add in class Component cannot be applied to given types;
          component.add(child);
                   ^
    required: Behavior[]
    found:    Component
    reason: varargs mismatch; Component cannot be converted to Behavior
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.4.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
1 actionable task: 1 executed
]9;4;0